fixed gravatar blurry looking photos

--- a/app/assets/stylesheets/student_profiles.scss
+++ b/app/assets/stylesheets/student_profiles.scss
@@ -366,6 +366,8 @@ header img {
 
 .s_img {
   float: none;
+  width: 100px;
+  height: 100px;
 }
 
 header .intro-text .name {
